// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apd (application) component renders correctly 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ApdApplication
    apdSelected={true}
    place={Object {}}
    selectApdOnLoad={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="ds-l-row ds-u-margin--0"
      >
        <Connect(Sidebar)
          place={Object {}}
        />
        <div
          className="site-main p2 sm-p4 md-px0 ds-l-col--9"
        >
          <Connect(TopBtns) />
          <ApdStateProfile />
          <Connect(ApdSummary) />
          <Connect(PreviousActivities) />
          <Connect(All) />
          <Connect(ScheduleSummary) />
          <ProposedBudget />
          <Connect(AssurancesAndCompliance) />
          <Connect(ExecutiveSummary) />
        </div>
      </div>,
      "className": "site-body ds-l-container",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Connect(Sidebar)
            place={Object {}}
          />,
          <div
            className="site-main p2 sm-p4 md-px0 ds-l-col--9"
          >
            <Connect(TopBtns) />
            <ApdStateProfile />
            <Connect(ApdSummary) />
            <Connect(PreviousActivities) />
            <Connect(All) />
            <Connect(ScheduleSummary) />
            <ProposedBudget />
            <Connect(AssurancesAndCompliance) />
            <Connect(ExecutiveSummary) />
          </div>,
        ],
        "className": "ds-l-row ds-u-margin--0",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "place": Object {},
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Connect(TopBtns) />,
              <ApdStateProfile />,
              <Connect(ApdSummary) />,
              <Connect(PreviousActivities) />,
              <Connect(All) />,
              <Connect(ScheduleSummary) />,
              <ProposedBudget />,
              <Connect(AssurancesAndCompliance) />,
              <Connect(ExecutiveSummary) />,
            ],
            "className": "site-main p2 sm-p4 md-px0 ds-l-col--9",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {},
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="ds-l-row ds-u-margin--0"
        >
          <Connect(Sidebar)
            place={Object {}}
          />
          <div
            className="site-main p2 sm-p4 md-px0 ds-l-col--9"
          >
            <Connect(TopBtns) />
            <ApdStateProfile />
            <Connect(ApdSummary) />
            <Connect(PreviousActivities) />
            <Connect(All) />
            <Connect(ScheduleSummary) />
            <ProposedBudget />
            <Connect(AssurancesAndCompliance) />
            <Connect(ExecutiveSummary) />
          </div>
        </div>,
        "className": "site-body ds-l-container",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Connect(Sidebar)
              place={Object {}}
            />,
            <div
              className="site-main p2 sm-p4 md-px0 ds-l-col--9"
            >
              <Connect(TopBtns) />
              <ApdStateProfile />
              <Connect(ApdSummary) />
              <Connect(PreviousActivities) />
              <Connect(All) />
              <Connect(ScheduleSummary) />
              <ProposedBudget />
              <Connect(AssurancesAndCompliance) />
              <Connect(ExecutiveSummary) />
            </div>,
          ],
          "className": "ds-l-row ds-u-margin--0",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "place": Object {},
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Connect(TopBtns) />,
                <ApdStateProfile />,
                <Connect(ApdSummary) />,
                <Connect(PreviousActivities) />,
                <Connect(All) />,
                <Connect(ScheduleSummary) />,
                <ProposedBudget />,
                <Connect(AssurancesAndCompliance) />,
                <Connect(ExecutiveSummary) />,
              ],
              "className": "site-main p2 sm-p4 md-px0 ds-l-col--9",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {},
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`apd (application) component renders correctly 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ApdApplication
    apdSelected={false}
    place={Object {}}
    selectApdOnLoad={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "push": false,
      "to": "/",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "push": false,
        "to": "/",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
